<resources>
    <string name="app_name" translatable="false">Au Temps Donne</string>
    <string name="menu" translatable="false">Menu</string>
    <string name="Authentication">Authentification</string>
    <string name="UsernameOrMail">Nom d\'utilisateur ou Mail</string>
    <string name="Password">Mot de passe</string>
    <string name="Submit">Envoyer</string>
    <string name="BadCredentials">Identifiants invalides</string>
    <string name="AssignNFC">Assigner un bénévole à un tag NFC</string>
    <string name="ChooseVolunteer">Choisissez un bénévole</string>
    <string name="SaveTag">Enregistrer sur le tag</string>
    <string name="NFCIcon">Icône NFC</string>
    <string name="ScanNFC">S\'il vous plaît, scannez votre tag</string>
    <string name="FirstName">Prénom</string>
    <string name="Name">Nom</string>

    <!-- ERRORS -->
    <string name="LoginErr">Connexion Impossible</string>
    <string name="VolunteersLoadingErr">Chargement des volontaires impossible</string>
    <string name="Err">Quelque chose s\'est mal passé</string>
    <string name="NoWritingErr">Ecriture impossible</string>
    <string name="NoSpaceTagErr">Aucun espace disponible</string>
    <string name="Written">Écrit</string>
    <string name="ReadNFC">Lire une puce</string>
    <string name="DataErr">Données invalides</string>
    <string name="Volunteer">Volontaire</string>
    <string name="VolunteerLoadingErr">Chargement du volontaire impossible</string>
    <string name="Profile">Profil</string>
    <string name="EmailAddressDots">Addresse Email : </string>
    <string name="PhoneNbDots">N° de téléphone : </string>
    <string name="Address">Adresse</string>
    <string name="Street">Rue</string>
    <string name="HouseNb">Numéro d\'adresse</string>
    <string name="City">Ville</string>
    <string name="Zipcode">Code Postal</string>
    <string name="BuildingNb">Bâtiment</string>
    <string name="Site" translatable="false">Site</string>
    <string name="Username">Nom d\'utilisateur</string>
    <string name="Birthdate_dots">Date de Naissance :</string>
    <string name="Birthdate">Date de Naissance</string>
    <string name="Site_dots" translatable="false">Site :</string>
    <string name="Address_dots">Adresse :</string>
    <string name="NullTokenErr">Authentification requise</string>
    <string name="ForbiddenErr">Accès Interdit</string>
    <string name="Building">Bâtiment</string>
    <string name="Edit">Modifier</string>
    <string name="Save">Sauvegarder</string>
    <string name="EditAddress">Modification de l\'adresse</string>
    <string name="OK" translatable="false">OK</string>
    <string name="Cancel">Annuler</string>
    <string name="SaveErr">Sauvegarde échouée</string>
    <string name="SaveSuccess">Sauvegarde réussie</string>
    <string name="CancelAsk">Annuler tous les changements ?</string>
    <string name="Yes">Oui</string>
    <string name="No">Non</string>
    <string name="ProductImg">Image du produit</string>
    <string name="IdDots" translatable="false">"ID : "</string>
    <string name="ExpiryDateDots">"Date d'expiration : "</string>
    <string name="QuantityDots">"Quantité : "</string>
    <string name="TypeDots" translatable="false">"Type : "</string>
    <string name="StoragesDots">Stockages : </string>
    <string name="NameDots">"Nom : "</string>
    <string name="UnitSizeDots">"Taille unitaire : "</string>
    <string name="GatheringDots">"Récolte : "</string>
    <string name="NeedCameraErr">La caméra est nécessaire pour cette action</string>
    <string name="ScanQR">Scanner un QR Code</string>
    <string name="InvalidQrErr">QR code invalide</string>
    <string name="FailedReqErr">Requête échouée</string>
    <string name="EditProductQuantity">Changer la quantité d\'un produit</string>
    <string name="ShowProduct">Afficher les informations du produit</string>
    <string name="ImpactedQuantityDots">"Quantité concernée : "</string>
    <string name="Remove">Retirer</string>
    <string name="Add">Ajouter</string>
    <string name="NegQuantityErr">Quantité négative impossible</string>
    <string name="Destock">Déstocker</string>
    <string name="ImpactedStorageDots">"Stockage concerné : "</string>
    <string name="ManageStorages">Gérer le stockage d\'un produit</string>
    <string name="DestockSuccess">Déstockage effectué</string>
    <string name="ProductNoMoreStored">Le produit n\'est plus stocké nulle part</string>
    <string name="ManageStock">Gérer le stock d\'un produit</string>
    <string name="ProductNotStored">Le produit scanné n\'est stocké nulle part</string>
    <string name="ThrowOut">Jeter les produits déstockés</string>
    <string name="NotStoredItems">Produits non stockés</string>
    <string name="RemoveQuantity">Supprimer la quantité</string>
    <string name="RemoveQuantitySuccess">Suppression effectuée</string>
    <string name="MinorDateErr">Vous devez avoir 18 ans</string>
    <string name="TooFarDateErr">La date indiquée a plus de 100 ans</string>
</resources>