<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/auth_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:textSize="50sp"
    />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
    >

        <TextView
            android:id="@+id/auth_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Authentication"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginBottom="30sp"
        />

        <EditText
            android:id="@+id/auth_username_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:autofillHints="username|emailAddress"
            android:hint="@string/UsernameOrMail"
            android:inputType="textEmailAddress"
            android:minWidth="600dp"
            android:minHeight="48dp"
            android:layout_gravity="center"
        />

        <EditText
            android:id="@+id/auth_password_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:autofillHints="password"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:minWidth="600dp"
            android:minHeight="48dp"
            android:layout_gravity="center"
        />

        <Button
            android:id="@+id/auth_submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Submit"
            android:layout_gravity="center"
            android:width="600dp"
        />

    </LinearLayout>
</FrameLayout>