<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssignNfcActivity"
    android:orientation="vertical"
>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SaveTag"
        android:gravity="center"
        android:textSize="35sp"
    />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >
        <ImageView
            android:id="@+id/nfc_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="170dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/NFCIcon"
            android:src="@drawable/nfc"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:singleLine="true"
            android:layout_below="@id/nfc_icon"
            android:text="@string/ScanNFC"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
        />

    </RelativeLayout>
</LinearLayout>