<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProductQuantityActivity"
    android:orientation="vertical"
    android:gravity="top"
    android:visibility="visible"
    >

    <ImageView
        android:id="@+id/product_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/ProductImg"
        android:src="@drawable/food_icon"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0.5"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/IdDots"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    />
                <TextView
                    android:id="@+id/product_id_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0.5"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NameDots"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    />
                <TextView
                    android:id="@+id/product_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0.5"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TypeDots"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    />
                <TextView
                    android:id="@+id/product_type_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0.5"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/QuantityDots"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    />
                <TextView
                    android:id="@+id/product_quantity_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ImpactedStorageDots"
                android:textSize="20sp"
                android:textStyle="italic"
                android:layout_marginEnd="10dp"
                />
            <NumberPicker
                android:id="@+id/product_impactedStorage_np"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ImpactedQuantityDots"
                android:textSize="20sp"
                android:textStyle="italic"
                android:layout_marginEnd="10dp"
                />
            <NumberPicker
                android:id="@+id/product_quantity_np"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginBottom="10dp"
        >

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/throwOutStc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minHeight="48dp"
            android:text="@string/ThrowOut" />

        <Button
            android:id="@+id/storage_main_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Destock"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:backgroundTint="@color/flashyOrange"
            />
    </LinearLayout>
</LinearLayout>