<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity"
    android:orientation="vertical"
    android:padding="10dp"
>

    <TextView
        android:id="@+id/auth_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Profile"
        android:gravity="center"
        android:textSize="50sp"
        android:layout_marginBottom="50dp"
    />

    <TextView
        android:id="@+id/profile_username_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:textSize="20sp"
    />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
    >
        <EditText
            android:id="@+id/profile_firstname_ed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/FirstName"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:enabled="false"
            android:textSize="20sp"
            android:minWidth="150dp"
            android:minHeight="48dp"
            android:layout_marginEnd="15dp"
        />

        <EditText
            android:id="@+id/profile_name_ed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Name"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:enabled="false"
            android:minWidth="150dp"
            android:minHeight="48dp"
            android:textSize="20sp"
        />
    </LinearLayout>

    <EditText
        android:id="@+id/profile_email_ed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/EmailAddress"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:enabled="false"
        android:textSize="20sp"
        android:minWidth="210dp"
        android:minHeight="48dp"
    />

    <EditText
        android:id="@+id/profile_phone_ed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/PhoneNb"
        android:autofillHints="phone"
        android:inputType="phone"
        android:enabled="false"
        android:textSize="20sp"
        android:minWidth="210dp"
        android:minHeight="48dp"
        android:layout_marginBottom="10dp"
    />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:id="@+id/profile_birthdate_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Birthdate_dots"
            android:textSize="20sp"
            android:minWidth="150dp"
            android:minHeight="48dp"
            android:layout_marginEnd="15dp"
        />

        <EditText
            android:id="@+id/profile_birthdate_ed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Birthdate"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:enabled="false"
            android:minHeight="48dp"
            android:textSize="20sp"
        />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_address_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
    >
        <TextView
            android:id="@+id/profile_address_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Address_dots"
            android:layout_gravity="start"
            android:textSize="20sp"
            android:layout_marginEnd="15dp"
        />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
        >
            <TextView
                android:id="@+id/profile_streetNb_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="14"
                android:textSize="20sp"
                android:layout_marginEnd="15dp"
            />
            <TextView
                android:id="@+id/profile_street_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="rue des Lilas"
                android:textSize="20sp"
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
        >
            <TextView
                android:id="@+id/profile_buildingNb_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bâtiment A"
                android:textSize="20sp"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/profile_zipcode_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="92000"
                android:textSize="20sp"
                android:layout_marginEnd="15dp"
            />
            <TextView
                android:id="@+id/profile_city_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nanterre"
                android:textSize="20sp"
            />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:id="@+id/profile_site_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Site_dots"
            android:textSize="20sp"
            android:minHeight="48dp"
            android:layout_marginEnd="15dp"
            />

        <EditText
            android:id="@+id/profile_site_ed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Site"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:enabled="false"
            android:minWidth="150dp"
            android:minHeight="48dp"
            android:textSize="20sp"
            />
    </LinearLayout>
</LinearLayout>